--- a/config.json
+++ b/config.json
@@ -99,6 +99,12 @@
    "icon": "icon-phone", 
    "link": "support-home", 
    "type": "module"
+  },
+  "Tour": {
+   "color": "#2c3e50", 
+   "icon": "icon-phone", 
+   "link": "tour", 
+   "type": "module"
   }
  }, 
  "requires_framework_version": "==3.10.2"
